--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "chart.js": "^2.8.0",
     "core-js": "^2.5.4",
     "jquery": "^3.4.1",
+    "ng-charts": "^1.0.0-alpha",
     "popper.js": "^1.15.0",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
